testsuite/escript/func/funcref04.err
funcref04.src:7:10: error: Unknown identifier 'sum'.